# pim-compiler

./: .gitignore  CMakeLists.txt  README.md  input.cpp  input_10x10.cpp  input_20x20.cpp  input_matrices.cpp
include/: compiler.hpp  instruction.hpp  ir.hpp
src/: compiler.cpp  main.cpp
